--- a/Session2_HW/Insta_Clone/Instagram_m_Clone.html
+++ b/Session2_HW/Insta_Clone/Instagram_m_Clone.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="./Instagram_m_Clone.css" />
     <title>Instagram_mobile_Clone</title>
 </head>
+
 <body>
     <div class="container">
         <div class="profile_bar">
@@ -22,7 +24,8 @@
 
         <div class="effort_bar">
             <div class="profile_pic">
-                <img src="https://scontent-ssn1-1.cdninstagram.com/v/t51.2885-19/s150x150/160911654_1296383474091873_3734132845459775297_n.jpg?tp=1&_nc_ht=scontent-ssn1-1.cdninstagram.com&_nc_ohc=G4Jn2URCJewAX9aUGJv&ccb=7-4&oh=28337bdaea1e1d261a183822c37e916d&oe=608A2DD2&_nc_sid=4f375e" />            
+                <img
+                    src="https://scontent-ssn1-1.cdninstagram.com/v/t51.2885-19/s150x150/160911654_1296383474091873_3734132845459775297_n.jpg?tp=1&_nc_ht=scontent-ssn1-1.cdninstagram.com&_nc_ohc=G4Jn2URCJewAX9aUGJv&ccb=7-4&oh=28337bdaea1e1d261a183822c37e916d&oe=608A2DD2&_nc_sid=4f375e" />
             </div>
             <div class="effort1">
                 <span class="bold">593<br></span>
@@ -31,8 +34,8 @@
             <div class="effort2">
                 <span class="bold">18.1만<br></span>
                 <span>팔로워</span>
-            </div>  
-            <div class="effort3">  
+            </div>
+            <div class="effort3">
                 <span class="bold">263<br></span>
                 <span>팔로잉</span>
             </div>
@@ -57,27 +60,49 @@
 
         <div class="interact_bar">
             <div class="interact">
-                <img src="https://scontent-ssn1-1.cdninstagram.com/v/t51.2885-15/e35/c0.437.1125.1125a/s150x150/130587661_166313731841434_3989743261026614103_n.jpg?tp=1&_nc_ht=scontent-ssn1-1.cdninstagram.com&_nc_cat=110&_nc_ohc=wbMVCkcLYL0AX_3GRzp&ccb=7-4&oh=1699496adced0b07ff8a2fc640a377dd&oe=60623429&_nc_sid=acd11b" />
+                <img
+                    src="https://scontent-ssn1-1.cdninstagram.com/v/t51.2885-15/e35/c0.437.1125.1125a/s150x150/130587661_166313731841434_3989743261026614103_n.jpg?tp=1&_nc_ht=scontent-ssn1-1.cdninstagram.com&_nc_cat=110&_nc_ohc=wbMVCkcLYL0AX_3GRzp&ccb=7-4&oh=1699496adced0b07ff8a2fc640a377dd&oe=60623429&_nc_sid=acd11b" />
                 <p>Sleepless</p>
             </div>
             <div class="interact">
-                <img src="https://scontent-ssn1-1.cdninstagram.com/v/t51.12442-15/e35/c0.292.750.750a/s150x150/81847013_457312728504638_2084658657103698627_n.jpg?tp=1&_nc_ht=scontent-ssn1-1.cdninstagram.com&_nc_cat=102&_nc_ohc=ZjNydPL4oYcAX8HEmuT&ccb=7-4&oh=be72abd08fc3b3f859e8b58dc45baff5&oe=6062024F&_nc_sid=acd11b" />
+                <img
+                    src="https://scontent-ssn1-1.cdninstagram.com/v/t51.12442-15/e35/c0.292.750.750a/s150x150/81847013_457312728504638_2084658657103698627_n.jpg?tp=1&_nc_ht=scontent-ssn1-1.cdninstagram.com&_nc_cat=102&_nc_ohc=ZjNydPL4oYcAX8HEmuT&ccb=7-4&oh=be72abd08fc3b3f859e8b58dc45baff5&oe=6062024F&_nc_sid=acd11b" />
                 <p>UNSTABLEMINDSET</p>
             </div>
             <div class="interact">
-                <img src="https://scontent-ssn1-1.cdninstagram.com/v/t51.12442-15/e35/c0.398.1024.1024a/s150x150/79596583_485827355669064_5578913639414952035_n.jpg?tp=1&_nc_ht=scontent-ssn1-1.cdninstagram.com&_nc_cat=100&_nc_ohc=lWIUfAp6UVAAX-uCxOi&tn=E69TTFC-daLq6-Kj&ccb=7-4&oh=d8ee291187706af819a91204ecbecdf2&oe=606226AF&_nc_sid=acd11b" />
+                <img
+                    src="https://scontent-ssn1-1.cdninstagram.com/v/t51.12442-15/e35/c0.398.1024.1024a/s150x150/79596583_485827355669064_5578913639414952035_n.jpg?tp=1&_nc_ht=scontent-ssn1-1.cdninstagram.com&_nc_cat=100&_nc_ohc=lWIUfAp6UVAAX-uCxOi&tn=E69TTFC-daLq6-Kj&ccb=7-4&oh=d8ee291187706af819a91204ecbecdf2&oe=606226AF&_nc_sid=acd11b" />
                 <p>MINDSET SET</p>
             </div>
             <div class="interact">
-                <img src="https://scontent-ssn1-1.cdninstagram.com/v/t51.12442-15/e35/c0.398.1024.1024a/s150x150/79482676_178253776900175_7359401782133668755_n.jpg?tp=1&_nc_ht=scontent-ssn1-1.cdninstagram.com&_nc_cat=111&_nc_ohc=WoPd720st68AX-u4s0E&ccb=7-4&oh=743c1428a0bd5d736f39d581d47a592a&oe=6061EE38&_nc_sid=acd11b" />
+                <img
+                    src="https://scontent-ssn1-1.cdninstagram.com/v/t51.12442-15/e35/c0.398.1024.1024a/s150x150/79482676_178253776900175_7359401782133668755_n.jpg?tp=1&_nc_ht=scontent-ssn1-1.cdninstagram.com&_nc_cat=111&_nc_ohc=WoPd720st68AX-u4s0E&ccb=7-4&oh=743c1428a0bd5d736f39d581d47a592a&oe=6061EE38&_nc_sid=acd11b" />
                 <p>UNSTABLE MIND</p>
             </div>
         </div>
 
         <div class="icon_bar">
-            <img src="./insta_icon/svg/grid_on-black-18dp.svg" />
-            <img src="./insta_icon/svg/live_tv-black-18dp.svg" />
-            <img src="./insta_icon/svg/assignment_ind-black-18dp.svg" />
+            <div class="underline current">
+                <form action="./Instagram_m_Clone.html" method="GET">
+                    <button type="submit">
+                        <img id="now" src="./insta_icon/svg/grid_on-black-18dp.svg" />
+                    </button>
+                </form>
+            </div>
+            <div class="underline">
+                <form action="./Instagram_m_Clone2.html" method="GET">
+                    <button type="submit">
+                        <img src="./insta_icon/svg/live_tv-black-18dp.svg" />
+                    </button>
+                </form>
+            </div>
+            <div class="underline">
+                <form action="./Instagram_m_Clone3.html" method="GET">
+                    <button type="submit">
+                        <img src="./insta_icon/svg/assignment_ind-black-18dp.svg" />
+                    </button>
+                </form>
+            </div>
         </div>
 
         <div class="content_bar">
@@ -100,4 +125,5 @@
         </div>
     </div>
 </body>
+
 </html>
